tests/NormalTests/paczka1/small_fuzzy/71827000.err
Error in line 5: 1Et4Q95 S15 23,8
Error in line 7: 4t2gDen5t S449 46,9
Error in line 6: 1Et4Q95 S449 47,8
